Adding a bit more to the library;

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,10 @@
             "es2020"
         ],
         "outDir": "src/out/",
-        "removeComments": true, 
+        "removeComments": true,
         "declaration": true
     },
     "include": [
-        "src/*.ts"
+        "src/*.ts",
     ]
 }
