--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "module": "ES2020",
+        "target": "ES2020",
         "lib": [
             "es2020"
         ],
@@ -8,6 +9,9 @@
         "removeComments": true,
         "declaration": true
     },
+    "files": [
+        "main.ts"
+    ],
     "include": [
         "src/*.ts",
     ]
