Writing the documentation, making LOTS of fixes and minor changes, completing the API, making it more consistent (fixing issues with RegExps also...)

--- a/package.json
+++ b/package.json
@@ -1,8 +1,23 @@
 {
-	"name": "@hgargg-0710/parser.js",
+	"name": "@hgargg-0710/parsers.js",
 	"version": "0.1.0",
 	"description": "A simple JavaScript library for simplification the process of organization/creation of parsers of arbitrary complexity.",
+	"type": "module",
 	"main": "src/out/main.js",
 	"license": "MIT",
-	"author": "hgargg-0710"
+	"author": "hgargg-0710",
+	"keywords": [
+		"parsing",
+		"tokenizing",
+		"validation",
+		"generation",
+		"maps"
+	],
+	"dependencies": {
+		"@hgargg-0710/one": "0.1.0"
+	},
+	"bugs": {
+		"url": "https://github.com/HGARgG-0710/parsers.js/issues"
+	},
+	"homepage": "https://github.com/HGARgG-0710/parsers.js#readme"
 }
