--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
 	"version": "0.1.3",
 	"description": "A simple JavaScript library for simplification the process of organization/creation of parsers/validators/code-generators of arbitrary complexity.",
 	"type": "module",
-	"main": "main.mjs",
+	"main": "./dist/main.js",
+	"types": "./dist/main.d.ts",
 	"license": "MIT",
 	"author": "hgargg-0710",
 	"keywords": [
