--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,6 @@
 		],
 		"target": "ES2020",
 		"moduleResolution": "Node16",
-		"sourceMap": true,
 		"declaration": true,
 		"verbatimModuleSyntax": true,
 		"declarationMap": true,
@@ -18,7 +17,8 @@
 		}
 	},
 	"exclude": [
-		"node_modules"
+		"node_modules", 
+		"dist"
 	],
 	"include": [
 		"./**/*.ts"
