--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
 	"compilerOptions": {
+		"baseUrl": ".",
 		"outDir": "dist",
 		"lib": [
 			"ES2020"
@@ -18,7 +19,8 @@
 	},
 	"exclude": [
 		"node_modules",
-		"dist"
+		"dist",
+		"tests"
 	],
 	"include": [
 		"./**/*.ts"
