--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,11 @@
 			"ES2020"
 		],
 		"target": "ES2020",
-		"moduleResolution": "Node16",
+		"module": "node16",
+		"moduleResolution": "node16",
 		"declaration": true,
-		"verbatimModuleSyntax": true,
 		"declarationMap": true,
-		"module": "Node16",
+		"verbatimModuleSyntax": true,
 		"paths": {
 			"@hgargg-0710/*": [
 				"./node_modules/@hgargg-0710/*"
