tests(import): new import tests, fixing import bugs
1. adding all the basic import tests (save for those for TreeStream/ and StreamClass/)
2. fixing some minor bugs with 'tsconfig.json', import-s and 'export type'
3. splitting generation of '.d.ts' and '.js' files into two TypeScript compiler configs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A JavaScript library for simplification of the process of organization/creation of parsers/validators/code-generators of arbitrary complexity.",
 	"type": "module",
 	"main": "./dist/main.js",
-	"types": "./dist/main.d.ts",
+	"types": "./dist/types.d.ts",
 	"license": "MIT",
 	"author": "hgargg-0710",
 	"keywords": [
@@ -24,7 +24,8 @@
 	"scripts": {
 		"test": "cd tests && tsc --project tsconfig.json && cd ..",
 		"build": "tsc --project tsconfig.json",
-		"all": "npm run build && npm run test"
+		"types": "tsc --project ts-types.json",
+		"all": "npm run build && npm run types && npm run test"
 	},
 	"devDependencies": {
 		"@hgargg-0710/summat.ts": "^0.0.1",
