--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,6 @@
 		"target": "ES2020",
 		"module": "node16",
 		"moduleResolution": "node16",
-		"declaration": true,
-		"declarationMap": true,
 		"verbatimModuleSyntax": true,
 		"paths": {
 			"@hgargg-0710/*": [
@@ -21,7 +19,9 @@
 	"exclude": [
 		"node_modules",
 		"dist",
-		"tests"
+		"tests",
+		"./**/interfaces.ts",
+		"./types.ts"
 	],
 	"include": [
 		"./**/*.ts"
