replacing the persistnent if-statement inside the StreamClass '.curr' property getter for the case of '!!.buffer' && '.pos in this', with proper property-binding at the very end of the Stream

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
 			"@hgargg-0710/*": [
 				"./node_modules/@hgargg-0710/*"
 			]
-		}
+		},
+		"noUnusedLocals": true
 	},
 	"exclude": [
 		"node_modules",
