removing 'abstract' exports and redundant internal exports (re-organizing files accordingly)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 		"build-js": "tsc --project tsconfig.json",
 		"build-types": "tsc --project ts-types.json",
 		"build": "npm run build-js && npm run build-types",
-		"all": "npm run build && npm run test"
+		"all": "npm run build && npm run test",
+		"unused": "ts-unused-exports ./tsconfig.json"
 	},
 	"devDependencies": {
 		"@hgargg-0710/summat.ts": "^0.0.1",
