fix: types [preliminary]
1. removing 'nested' from the library (redundant)
2. making new notes for v0.4
3. making initial pass over the types' consistency

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"unused": "ts-unused-exports ./tsconfig.json"
 	},
 	"devDependencies": {
-		"@hgargg-0710/summat.ts": "^0.0.1",
-		"@types/node": "^20.14.8"
+		"@hgargg-0710/summat.ts": "0.0.1",
+		"@types/node": "^22.12.0"
 	}
 }
