--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -4,7 +4,7 @@
 		"outDir": "../dist",
 		"strictNullChecks": true,
 		"lib": [
-			"ES2020"
+			"ESNext"
 		],
 		"target": "ES2020",
 		"module": "node16",
