adding first passing test for `mixin`

--- a/ts/tsconfig.json
+++ b/ts/tsconfig.json
@@ -15,7 +15,8 @@
 				"../node_modules/@hgargg-0710/*"
 			]
 		},
-		"noUnusedLocals": true
+		"noUnusedLocals": true, 
+		"sourceMap": true
 	},
 	"exclude": [
 		"../node_modules",
