--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
 	},
 	"homepage": "https://github.com/HGARgG-0710/parsers.js#readme",
 	"scripts": {
-		"test-compile": "cd tests && tsc --project tsconfig.json && cd ..",
 		"build-js": "tsc --project ts/tsconfig.json",
 		"build-types": "tsc --project ts/types.json",
+		"test-build": "tsc --project ts/test-build.json", 
+		"test-compile": "cd tests && tsc --project tsconfig.json && cd ..",
 		"build": "npm run build-js && npm run build-types",
-		"all": "npm run build && npm run test-compile",
+		"test-build-all": "npm run test-build && npm run build-types && npm run test-compile",
 		"unused": "ts-unused-exports ./tsconfig.json"
 	},
 	"devDependencies": {
